2013-06-07  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el: Reorganize file structure again, to pacify byte-compiler.

2013-06-06  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el: Fix more byte-compiler warnings.
	(todos-jump-to-category): Let-bind variable that was mistakenly free.
	(todos-toggle-item-highlighting, todos-convert-legacy-files):
	Use eval-when-compile.

2013-06-05  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el: Fix byte-compiler warnings.
	(todos-merge-category): Relocate let-bound variable.
	(todos-toggle-item-highlighting): Restrict to todos-mode,
	todos-archive-mode and todos-filtered-items-mode.
	(todos-toggle-item-header, todos-diary-goto-entry)
	(todos-insert-sort-button): Let-bind variables that were
	mistakenly free.
	(todos-convert-legacy-files): Just require todo-mode instead of
	conditionalizing it.
	(todos-modes-set-2): Check whether hl-line-range-function is void.

2013-06-05  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el: Further code cleanup.  Changes to commentary.  Remove
	autoload cookies.  Handle todo items in Fancy Diary display.
	(todos-done-separator): Reinstate length one less than
	window-width until bug#2749 is fixed.
	(todos-diary-goto-entry): New function, extracted from adapted
	definition of diary-goto-entry, which is removed to be added to
	diary-lib.el.
	(todos-powerset): Rename from todos-powerset-iterative and remove
	defalias by this name.  Add doc string and comments.
	(todos-modes-set-1, todos-modes-set-2, todos-modes-set-3)
	(todos-mode-external-set): Add doc string.

2013-06-04  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el (todos-add-item-if-new-category): Change default value.
	(todos-show, todos-jump-to-category, todos-add-file)
	(todos-add-category): Update doc string to reflect new default
	prompt for item insertion.
	(todos-add-file): Add omitted argument to called-interactively-p.
	(todos-show): Improve handling of adding first category.
